--- a/general.css
+++ b/general.css
@@ -4,7 +4,7 @@ body{
     margin: 4vw;
     /*
     background: rgb(165, 160, 100 ,1);*/
-    background: #B0C4DE;
+    background: #B347CE;
     color: #232642;
 }
 
