--- a/index.css
+++ b/index.css
@@ -22,6 +22,8 @@ div.pagination a {
     padding: 8px 16px;
     text-decoration: none;
     transition: background-color .3s;
+    width: auto;
+    margin: auto;
 }
 
 div.pagination a:hover {
