--- a/index.css
+++ b/index.css
@@ -22,9 +22,9 @@ div.pagination a {
     padding: 8px 16px;
     text-decoration: none;
     transition: background-color .3s;
-    width: 80em;
-    margin-left: auto;
-    margin-right: auto;
+    width: 90%;
+    margin: auto;
+    text-align: center;
 }
 
 div.pagination a:hover {
