--- a/general.css
+++ b/general.css
@@ -17,7 +17,7 @@ li a {
     color: #232642;
     text-decoration: none;
     transition: 0.5s;
-    text-align: centre;
+    text-align: center;
 }
 
 ul {
